# graphql-ffi-example

./: Cargo.toml  README.md  dev.js  package-lock.json  package.json
bindings/: Cargo.toml  build.rs  package.json  schema.graphql
bindings/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
